        Reviewed by Dave Hyatt.

https://bugs.webkit.org/show_bug.cgi?id=17433
        getComputedStyle() -> clip returns empty string

        Make getComputedStyle return a shape value for clip
        if it is set.

        Tests: fast/css/getPropertyValue-clip.html



Canonical link: https://commits.webkit.org/26382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33513 268f45cc-cd09-0410-ab3c-d52691b4dbfc